Ported to NetBSD 7.0/C99

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,6 +1,8 @@
 CFLAGS+=-I../getcols -Wall
-CFLAGS!+=pkg-config --cflags gsl
-LDADD!+=pkg-config --libs gsl
+#CFLAGS!+=pkg-config --cflags gsl
+#LDADD!+=pkg-config --libs gsl
+CFLAGS+=`pkg-config --cflags gsl`
+LDADD+=`pkg-config --libs gsl`
 DPADD+=${.CURDIR}/../getcols/libgetcols.a
 LDADD+=-L${.CURDIR}/../getcols -lgetcols
 .PATH: ${.CURDIR}/..
