--- a/getcols/Makefile
+++ b/getcols/Makefile
@@ -1,7 +1,8 @@
 LIB=getcols
 SRCS=columns.y parse.l double_array.c double_matrix.c
-CLEANFILES=y.tab.h
+CLEANFILES=columns.h
 NOPROFILE=yes
 NOPIC=yes
+YFLAGS=-d
 
 .include <bsd.lib.mk>
